# fast_obstacle_avoidance

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  requirements.txt  requirements_dev.txt  requirements_ros.txt  sequence_plot_bag.py  setup.cfg  setup.py
examples/: example_cluster_sample.py  examples_parameter_coparison.py  many_obstacles.py
fast_obstacle_avoidance/: README.md  control_robot.py  directional_learning.py  laserscan_utils.py  obstacle_avoider.py  sampling_container.py  utils.py
figures/: .gitignore
rosbag_evalutions/: README.md  bag_comparison_algorithms.py  bag_distance_controlcontribution_comparison.py  bag_doorpassing_comparison.py  bag_evaluate_dynamic.py  bag_evaluate_vectorfield.py  bag_evaluator.ipynb  bag_indoor_multiposition_plot.py  bag_mixed_field_comparison.py  bag_outdoor_boxplot.py  bag_outdoor_deviation.py  bag_replay_visualization.py  bag_timesequences_manual_integration.py  bag_utils.py  bag_vectorfield_mixed.py
scripts/: analytic_sensor_evaluation.py  animation_clustering_multi_obstacle.py  bag_dynamic_vectorfield.py  bag_evaluate.py  bag_evaluate_dynamic.py  bag_evaluate_vectorfield.py  bag_evaulate.py  bag_indoor_manual_integration_multievent.py  bag_indoor_multiposition_plot.py  bag_outdoor_deviation.py  bag_replay_visualization.py  bag_vectorfield_mixed.py  comparision_multiple_obstacles.py  comparison_custom_environment.py  comparison_multiple_algorithms.py  comparison_multiple_obstacles.py  example_multi_obstacle_integrator.py  multi_obstacle_avoidance.py  random_sampler_comparison.py  (+10 more)
(+48 files in other folders)
