[metadata]
name = fast_obstacle_avoidance
description = Algorithm to Numerically & Dynamically Avoid Obstacles
long_description = file: README.md
author = Lukas Huber
license = "BSD license"
# license_file = LICENSE
# nstall_requires=requirements
# tests_require=requirements_dev,
extras_require={"test": dev_requirements}
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
# test_suite="tests,

[options]
python_requires = >=3.7
package_dir =
    = fast_obstacle_avoidance
    # = src/robot_avoidance
    # = src/comparison
packages = find:


[flake8]
max-line-length = 160

